--- a/blocks/places/__url_size/places__url_size.css
+++ b/blocks/places/__url_size/places__url_size.css
@@ -1,4 +1,4 @@
-.place__url_size {
+.places__url_size {
     padding-top: 100px;
   }
 
@@ -11,7 +11,7 @@
 }
 
 @media only screen and (max-width: 425px) {
-    .place__url {
+    .places__url {
         padding-top: 0;
       }
 }
