--- a/blocks/baikal/__overlay/baikal__overlay.css
+++ b/blocks/baikal/__overlay/baikal__overlay.css
@@ -1,45 +1,52 @@
 .baikal__overlay {
-    top: 0px;
-    /* width: 1184px; */
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0px;
-    right: 0px;
-    text-align: center;
-    z-index: -2;
-    width: 100%;
-    height: 62.5vw;
-    background: black;
-    opacity: 30%;
-    transition: 1s linear;
-    text-decoration: none;
-    color: white;
-  }  
+  top: 0px;
+  /* width: 1184px; 
+
+  /*z-index: -2;*/
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 30%;
+  transition: 1s linear;
+  text-decoration: none;
+  color: white;
+
+  z-index: -1;
+  
+}
+
+.header__link:hover {
+  opacity: 0.5;
+
+}
+
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
-    .baikal__overlay {
-        width: 100%;
-        margin: auto;
-      }
-      
+  .baikal__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;    
+  }
+
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
-    .baikal__overlay {
-        width: 100%;
-        margin: auto;
-        max-height: 62.5vw;
-        min-height: 26vw;
-      }
+  .baikal__overlay {
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media only screen and (max-width: 425px) {
-    .baikal__overlay {
-        max-width: 100%;
-        max-height: 200px;
-        margin: 0 auto;
-      }
+  .baikal__overlay {
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+  }
 }
