--- a/blocks/baikal/__train/baikal__train.css
+++ b/blocks/baikal/__train/baikal__train.css
@@ -1,13 +1,17 @@
 .baikal__train {
-    top: 0px;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0px;
-    right: 0px;
-    text-align: center;
-    z-index: -2;
-    width: 100%;
+  background-image: url(/images/__background.png);
+  background-repeat: no-repeat;
+  aspect-ratio: 8 / 5;
+  text-align: center;
+  background-position: 50% 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 92%;
+  z-index: -2;
+  overflow: hidden;
+  position: relative;
   }
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
@@ -30,5 +34,6 @@
 
   .baikal__train {
     max-width: 100%;
+    background-size: 100%;
   }
 }
