--- a/blocks/baikal/baikal.css
+++ b/blocks/baikal/baikal.css
@@ -1,12 +1,19 @@
 .baikal {
     width: 100%;
-    min-height: 62.5vw;
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
     margin-top: 92px;
     color: #ffffff;
     z-index: 1;
+    overflow: hidden;
+    position: relative;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding-top: 90px;
+
   }
 
 
@@ -20,6 +27,7 @@
 
 @media only screen and (max-width: 425px) {
     .baikal {
+      padding-top: 66px;
         margin-left: auto;
         margin-right: auto;
         margin-top: 66px;
@@ -27,5 +35,6 @@
         max-width: 320px;
         max-height: 200px;
         min-height: 100px;
+        margin: 0 auto;
       }
 }
