--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -4,8 +4,8 @@
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
     .cards__item {
-        width: 300px;
-        }
+        max-width: 100%;
+      }
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
