--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,5 +11,8 @@
 @media only screen and (max-width: 768px) and (min-width: 425px) {}
 
 @media only screen and (max-width: 425px) {
-    
+  .footer__copyright {
+    margin: 0 auto;
+  }
+  
 }
