--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -7,6 +7,10 @@
     text-decoration: none;
     transition: 1s linear;
   }
+  
+  .header__link:hover {
+    text-decoration: underline;
+  }
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
