--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,12 +1,14 @@
 .lead__subtitle {
-    font-size: 30px;
-    font-style: normal;
-    line-height: 36px;
-    text-align: center;
-    max-width: 640px;
-    display: flex;
-    margin: 32px auto 0px;
-    justify-content: space-around;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 36px;
+  font-weight: 400;
+  text-align: center;
+  max-width: 640px;
+  display: flex;
+  margin: 32px auto 0px;
+  justify-content: space-around;
+  
   }
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {
@@ -25,6 +27,8 @@
     .lead__subtitle {
         font-size: 4vw;
         line-height: 1em;
+        padding-top: 32px;
+        margin: 0 auto;
       }    
 }
 
@@ -34,6 +38,7 @@
         font-size: 16px;
         line-height: 20px;
         max-width: 288px;
+        font-weight: 400;
         margin-left: auto;
         margin-right: auto;
         margin-top: 0;
