--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -1,12 +1,9 @@
-.place__paragraph {
-    padding-bottom: 56px;
-    font-weight: 400;
+.places__link {
+    line-height: 22px;
     font-size: 18px;
-    line-height: 29.34px;
-  }
-
-  .place__paragraph:last-child {
-    padding-bottom: 0;
+    font-weight: 400;
+    color: #ffffff;
+    text-decoration: underline;
   }
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
@@ -16,8 +13,5 @@
 @media only screen and (max-width: 768px) and (min-width: 425px) {}
 
 @media only screen and (max-width: 425px) {
-    .place__paragraph {
-        max-width: 288px;
-        padding-bottom: 25px;
-      }
+    
 }
