--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,4 +1,4 @@
-.place__title {
+.places__title {
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
@@ -21,14 +21,14 @@
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
-    .place__title {
+    .places__title {
         font-size: 42px;
         max-width: 340px;
       }
 }
 
 @media only screen and (max-width: 425px) {
-    .place__title {
+    .places__title {
         font-size: 32px;
         line-height: 35px;
       }
