--- a/blocks/places/__url/places__url.css
+++ b/blocks/places/__url/places__url.css
@@ -1,4 +1,4 @@
-.place__url {
+.places__url {
     padding-top: 30px;
     font-weight: 400;
     font-size: 12px;
@@ -10,8 +10,14 @@
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+  .places__url {
+    margin: 0 auto;
+  }
+}
 
 @media only screen and (max-width: 425px) {
-    
+  .places__url {
+    margin: 0 auto;
+  }
 }
