--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,10 @@
 @import url(../blocks/root/root.css);
+@import url(../blocks/root/root.css);
 
-@import url(../vendor/normalize.css);
+@import url(../fonts/fonts.css);
 
 @import url(../blocks/header/__container/header__container.css);
-@import url(../blocks/header/__logo/logo__place_header.css);
+@import url(../blocks/header/__logo/logo_place_header.css);
 @import url(../blocks/header/__link/header__link.css);
 
 @import url(../blocks/lead/lead.css);
@@ -24,13 +25,13 @@
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__item/cards__item.css);
 
-@import url(../blocks/places/__container/place__container.css);
-@import url(../blocks/places/__title/place__title.css);
-@import url(../blocks/places/__url_size/place__url_size.css);
-@import url(../blocks/places/__url/place__url.css);
-@import url(../blocks/places/__link/place__link.css);
-@import url(../blocks/places/__kosa/place__kosa.css);
-@import url(../blocks/places/__paragraph/place__paragraph.css);
+@import url(../blocks/places/__container/places__container.css);
+@import url(../blocks/places/__title/places__title.css);
+@import url(../blocks/places/__url_size/places__url_size.css);
+@import url(../blocks/places/__url/places__url.css);
+@import url(../blocks/places/__link/places__link.css);
+@import url(../blocks/places/__kosa/places__kosa.css);
+@import url(../blocks/places/__paragraph/places__paragraph.css);
 
 @import url(../blocks/baikal/baikal.css);
 @import url(../blocks/baikal/__link/baikal__link.css);
@@ -42,5 +43,4 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
-@import url(../blocks/footer/__list/footer__container.css);
-
+@import url(../blocks/footer/__columns/footer__columns.css);
