--- a/blocks/baikal/__train/baikal__train.css
+++ b/blocks/baikal/__train/baikal__train.css
@@ -1,5 +1,5 @@
 .baikal__train {
-  background-image: url(/images/__background.png);
+  background-image: url(../../../images/__background.png);
   background-repeat: no-repeat;
   aspect-ratio: 8 / 5;
   text-align: center;
