--- a/blocks/lead/__train/lead__train.css
+++ b/blocks/lead/__train/lead__train.css
@@ -1,5 +1,5 @@
 .lead__train {
-  background-image: url(/images/kalegin-michail-179870-unsplash.png);
+  background-image: url(../../../images/kalegin-michail-179870-unsplash.png);
   background-repeat: no-repeat;
   aspect-ratio: 8 / 5;
   text-align: center;
