--- a/blocks/baikal/baikal.css
+++ b/blocks/baikal/baikal.css
@@ -7,10 +7,8 @@
     color: #ffffff;
     z-index: 1;
     overflow: hidden;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
-    padding-top: 90px;
+    margin: 0 auto;
+    padding-top: 92px;
 
   }
 
