--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,5 +1,9 @@
+
+    .cards__item {
+        max-width: 17.2vw;
+      }
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {
-    
+
 }
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
