--- a/blocks/lead/__quote/lead__quote.css
+++ b/blocks/lead/__quote/lead__quote.css
@@ -16,7 +16,9 @@
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
-    
+  .lead__quote {
+    max-width: 925px;
+  }
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
