--- a/blocks/places/__kosa/places__kosa.css
+++ b/blocks/places/__kosa/places__kosa.css
@@ -1,3 +1,8 @@
+.places__kosa {
+  width: 27.9vw;
+  margin: auto;
+}
+
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
@@ -10,13 +15,13 @@
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
     .places__kosa {
-        width: 100%;
+        width: 20.6vw;
         margin: auto;
       }    
 }
 
 @media only screen and (max-width: 425px) {
     .places__kosa {
-        max-width: 320px;
-      }
+      width: 89.6vw;
+    }
 }
