--- a/blocks/travel/__time-zones/travel__time-zones.css
+++ b/blocks/travel/__time-zones/travel__time-zones.css
@@ -3,7 +3,7 @@
     margin-left: 0;
     padding-left: 0;
     margin-top: 20px;
-    margin-bottom: 16px;
+    margin-bottom: 0;
   }
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
