--- a/blocks/travel/__title/travel__title.css
+++ b/blocks/travel/__title/travel__title.css
@@ -17,8 +17,8 @@
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
   .travel__title {
     max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
+    margin-right: 0;
     padding-top: 88px;
   }
 }
