--- a/blocks/places/__container/places__container.css
+++ b/blocks/places/__container/places__container.css
@@ -25,8 +25,8 @@
 @media only screen and (max-width: 768px) and (min-width: 425px) {
   .places__container {
     padding-top: 92px;
-    grid-template-columns: 44.3vw 45.8vw;
-    gap: 1.25rem;
+    grid-template-columns: 44.5vw 46.1vw;
+    gap: 2.25rem 1rem;
     max-width: 720px;
 
 
@@ -36,7 +36,7 @@
 
 @media only screen and (max-width: 425px) {
   .places__container {
-    grid-template-columns: 320px;
+    grid-template-columns: 425px;
     padding-top: 50px;
     gap: 1.25rem;
     margin-left: auto;
