--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -23,6 +23,7 @@
 @media only screen and (max-width: 768px) and (min-width: 425px) {
   .places__paragraph {
     margin: 0 auto;
+    width: 46.1vw;
   }
 }
 
