--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,7 @@
 
 @import url(../blocks/places/__container/places__container.css);
 @import url(../blocks/places/__title/places__title.css);
+@import url(../blocks/places/__title/places__title_theme.css);
 @import url(../blocks/places/__url_size/places__url_size.css);
 @import url(../blocks/places/__url/places__url.css);
 @import url(../blocks/places/__link/places__link.css);
