--- a/blocks/baikal/__link/baikal__link.css
+++ b/blocks/baikal/__link/baikal__link.css
@@ -1,16 +1,41 @@
 .baikal__link {
-    color: white;
     text-decoration: none;
-    max-width: 100%;
+   display: block;
     cursor: pointer;
+    background: rgba(42, 44, 47, 0.3);
+    padding: 247px 90px 242px 90px;
+    color: white;
   }
+
+  .baikal__link:hover {
+   
+    cursor: pointer;
+    background: rgba(42, 44, 47, 0.8);
+    transition: 1s linear;
+
+  }
+
+
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+  .baikal__link {
+    padding: 70px 74px -10px 93px;
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+  }
+}
+
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+  .baikal__link {
+    padding: 34px 90px 68px 90px;
+
+  }
+}
 
 @media only screen and (max-width: 425px) {
-    
+  .baikal__link {
+    padding: 28px 90px 14px 79px;
+
+  }
 }
