--- a/blocks/baikal/__subtitle/baikal__subtitle.css
+++ b/blocks/baikal/__subtitle/baikal__subtitle.css
@@ -20,7 +20,8 @@
 @media only screen and (max-width: 768px) and (min-width: 425px) {
     .baikal__subtitle {
         font-size: 2.3vw;
-       
+        width: 100%;
+      }
       }  
 }
 
