--- a/blocks/baikal/baikal.css
+++ b/blocks/baikal/baikal.css
@@ -1,36 +1,35 @@
 .baikal {
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: relative;
-    margin-top: 92px;
-    color: #ffffff;
-    z-index: 1;
-    overflow: hidden;
-    margin: 0 auto;
-    padding-top: 92px;
-
+  background-image: url(../../../images/__background.png);
+  background-repeat: no-repeat;
+  aspect-ratio: 8 / 5;
+  text-align: center;
+  background-position: 50% 100%;
+  margin: 0 auto;
+  width: 92%;
+  z-index: -2;
+  padding-top: 92px;
   }
 
 
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+  .lead__train {
+    background-size: 100%;
+    padding-top: 56px;
+  }
+}
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
-    
+  .baikal {
+    background-size: 100%;
+    padding-top: 56px;
+    }
 }
 
 @media only screen and (max-width: 425px) {
     .baikal {
-      padding-top: 66px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 66px;
-        margin-bottom: 0;
-        max-width: 320px;
-        max-height: 200px;
-        min-height: 100px;
-        margin: 0 auto;
+      padding-top: 40px;
+      background-size: 100%;
       }
 }
