--- a/blocks/places/__kosa/places__kosa.css
+++ b/blocks/places/__kosa/places__kosa.css
@@ -9,7 +9,7 @@
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
     .places__kosa {
         width: 100%;
-        margin: auto;
+        margin: 0 auto;
       }
 }
 
