--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -19,7 +19,10 @@
 @media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
-    
+  .places__title {
+    font-size: 7.3vw;
+  }
+  
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
