--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,32 +1,29 @@
 .cards {
-    max-width: 171.8vw;
-    margin: 0 auto;
-    display: grid;
-    justify-content: center;
-    padding-top: 92px;
-    grid-template-columns: repeat(2, 17.2vw 17.2vw);
-    gap: 1rem;
+  max-width: 171.8vw;
+  margin: 0 auto;
+  display: grid;
+  justify-content: center;
+  padding-top: 92px;
+  grid-template-columns: repeat(2, 284px 284px);
+  gap: 17px;
   }
 
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {
-  
-}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
     .cards {
-        padding-top: 64px;
-        grid-template-columns: repeat(3, 29vw);
-        gap: 1rem;
+      padding-top: 92px;
+      grid-template-columns: repeat(3, 29vw);
+      gap: 1rem;
       }
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
 
     .cards {
-        max-width: 100%;
-        padding-top: 88px;
-        grid-template-columns: repeat(2, 45.8vw);
-        gap: 1rem;
+      max-width: 100%;
+      padding-top: 84px;
+      grid-template-columns: repeat(2, 45.8vw);
+      gap: 20px;
       }
     
 }
@@ -39,6 +36,6 @@
         margin-right: auto;
         margin-top: 0;
         margin-bottom: 0;
-        gap: 1rem;
+        gap: 12px;
       }
 }
