--- a/blocks/baikal/__subtitle/baikal__subtitle.css
+++ b/blocks/baikal/__subtitle/baikal__subtitle.css
@@ -2,7 +2,7 @@
     font-size: 18px;
     text-align: center;
     padding-top: 32px;
-    width: 360px;
+    max-width: 360px;
     line-height: 22px;
     margin-left: auto;
     margin-right: auto;
@@ -11,25 +11,19 @@
     z-index: -1;
   }
 
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
-
-@media only screen and (max-width: 1024px) and (min-width: 768px) {
-    
-}
-
 @media only screen and (max-width: 768px) and (min-width: 425px) {
     .baikal__subtitle {
         font-size: 2.3vw;
-        width: 66%;
+        max-width: 45%;
       }
       }  
 
 
 @media only screen and (max-width: 425px) {
     .baikal__subtitle {
-        max-width: 288px;
-        font-size: 14px;
-        line-height: 16px;
-        padding-top: 33px;
+      max-width: 270px;
+      font-size: 14px;
+      line-height: 16px;
+      padding-top: 20px;
       }
 }
