--- a/blocks/baikal/__title/baikal__title.css
+++ b/blocks/baikal/__title/baikal__title.css
@@ -3,26 +3,30 @@
     line-height: 76px;
     font-size: 72px;
     text-align: center;
-    max-width: 648px;
-
+    max-width: 560px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
     margin-bottom: 0;
     color: white;
     text-decoration: none;
+    padding-top: 245px;
 }
 
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
-    
+    .baikal__title {
+        padding-top: 195px;
+        max-width: 560px;
+    }
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
     .baikal__title {
         font-size: 9.3vw;
         line-height: 1.04em;
+        max-width: 554px;
+        padding-top: 117px;
       }
 }
 
@@ -31,7 +35,7 @@
         max-width: 270px;
         line-height: 32px;
         font-size: 35px;
-        padding-top: 33px;
+        padding-top: 35px;
     }
 }
 
