--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,15 +1,44 @@
+.footer {
+  color: #ffffff;
+  max-width: 1185px;
+  margin: auto;
+  display: flex;
+  /* height: 60px; */
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  padding-top: 84px;
+  padding-bottom: 24px;
+  list-style-type: none;
+
+}
 
 
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+  .footer {
+    padding-top: 80px;
+    margin: 0 auto;
+    margin-left: 48px;
+    margin-right: 48px;
+    max-width: 955px;
+  }
+}
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+  .footer {
+    padding-top: 74px;
+    margin: 0 auto;
+    max-width: 720px;
+  }
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+}
 
 @media only screen and (max-width: 425px) {
+  .footer {
+    padding-top: 65px;
+    padding-left: 15px;
+  }
 
-    .footer {
-        width: 320px;
-        margin: 0 auto;
-      }
 }
