--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,27 +1,24 @@
-.logo_place_header {
+.header__logo{
     max-width: 176px;
     max-height: 52px;
 }
 
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
-
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
-    .logo_place_header {
+    .header__logo {
         max-width: 176px;
         max-height: 52px;
-    }
-    
+    } 
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
-    .logo_place_header {
+    .header__logo {
         max-width: 176px;
         max-height: 52px;
     }
 }
 
 @media only screen and (max-width: 425px) {
-    .logo_place_header {
+    .header__logo {
         width: 142px;
         height: 42px;
     }
