--- a/blocks/lead/__container/lead__container.css
+++ b/blocks/lead/__container/lead__container.css
@@ -1,22 +1,35 @@
 .lead__container {
-    width: 90%;
-    margin: auto;    
+    width: 92%;
+    margin: auto;   
   }
-  
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {
 
-}
+  @media only screen and (max-width: 1280) and (min-width: 1024px) {
+    .lead__container {
+      width: 100%;
+  }
+    }
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
     .lead__container {
-        width: 100%;
+      width: 100%;
         margin: auto;
       }      
 }
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+  .lead__container {
+    width: 100%;;
+      margin: auto;
+    }    
+}
 
-@media only screen and (max-width: 425px) {}
+@media only screen and (max-width: 425px) {
+  .lead__container {
+    margin: auto;
+    background-size: 100%;
+    width: 100%;
+  }      
+}
 
 
 
