--- a/blocks/lead/__quote/lead__quote.css
+++ b/blocks/lead/__quote/lead__quote.css
@@ -11,13 +11,14 @@
     margin-bottom: 0;
     margin-left: auto;
     margin-right: auto;
+    TEXT-TRANSFORM: UPPERCASE
   }
-
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
   .lead__quote {
     max-width: 925px;
+    padding-top: 5px;
+
   }
 }
 
