--- a/blocks/lead/__train/lead__train.css
+++ b/blocks/lead/__train/lead__train.css
@@ -8,33 +8,36 @@
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
-  width: 100%;
+  max-width: 984px;
+  padding-top: 64px;
 }
 
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {
+@media only screen and (max-width: 1280) and (min-width: 1024px) {
   .lead__train {
-    background-size: 100%;
-  }
+    width: 91%;
 }
+  }
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
   .lead__train {
     background-size: 100%;
-    padding-top: 56px;
-  }
+    padding-top: 58px;
+    max-width: 928px;
 }
+  }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
   .lead__train {
     background-size: 100%;
-    padding-top: 56px;
+    padding-top: 66px;
+    width: 100%;
   }
 }
 
 @media only screen and (max-width: 425px) {
   .lead__train {
-    padding-top: 40px;
+    padding-top: 0;
     background-size: 100%;
+    min-width: 320px;
   }
-
 }
