--- a/blocks/lead/__way/lead__way.css
+++ b/blocks/lead/__way/lead__way.css
@@ -1,10 +1,9 @@
-
 .lead__way {
   background-image: url(../../../images/__way.png);
   background-repeat: no-repeat;
   aspect-ratio: 8 / 5;
   text-align: center;
-  background-position: 50% 100%;
+  background-position: 52% 26%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0;
@@ -12,29 +11,30 @@
   width: 100%;
 }
 
-  
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {
-
-}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
   .lead__way {
-    background-size: 100%;
+    background-size: 95%;
+    background-position: 38% 26%;
+    width: 100%;
+  }
+}
 
-}
-}
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
   .lead__way {
-    background-size: 100%;
+    background-size: 97%;
+    width: 100%;
+    background-position: 38% 23%;
+  }
+}
 
-}
-}
 
 @media only screen and (max-width: 425px) {
   .lead__way {
-    background-size: 100%;
-
-}
+    padding-top: 40px;
+    background-size: 96%;
+    min-width: 320px;
+    background-position: 38% 44%;
   }
-
+}
