--- a/blocks/places/__url/places__url.css
+++ b/blocks/places/__url/places__url.css
@@ -4,15 +4,12 @@
     font-size: 12px;
     line-height: 20.4px;
     color: #AAAAAA;
+    margin: 0 auto;
   }
-
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
-
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
   .places__url {
-    margin: 0 auto;
+
   }
 }
 
@@ -20,6 +17,8 @@
   .places__url {
     width: 68.6vw;
     margin: 0 auto;
-    padding-top: 4px;
+    padding-top: 0;
+    margin-left: 16px;
+    margin-right: 16px;
   }
 }
