--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -3,15 +3,6 @@
   background-color: #2A2C2F;
   margin-left: auto;
   margin-right: auto;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
 
 }
-
-
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
-
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
-
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
-
-@media only screen and (max-width: 425px) {}
