--- a/blocks/travel/__quote/travel__quote.css
+++ b/blocks/travel/__quote/travel__quote.css
@@ -7,21 +7,18 @@
     max-width: 984px;
     display: flex;
     justify-content: flex-start;
-    width: 769px;
+    width: 690px;
     margin-top: 0;
     margin: 0 0;
 
   }
 
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {
-    
-}
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
     .travel__quote {
         max-width: 100%;
         margin-bottom: 0;
-
+        max-width: 690px;
       }
       
 }
