--- a/blocks/travel/__time-zones/travel__time-zones.css
+++ b/blocks/travel/__time-zones/travel__time-zones.css
@@ -2,15 +2,24 @@
     list-style-type: none;
     margin-left: 0;
     padding-left: 0;
-    margin-top: 20px;
+    margin-top: 31px;
     margin-bottom: 0;
   }
 
-@media only screen and (max-width: 1280px) and (min-width: 1024px) {}
+  @media only screen and (max-width: 1024px) and (min-width: 768px) {
+    .travel__time-zones {
+      margin-top: 32px;
+    }
+  }
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {}
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {}
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+  .travel__time-zones {
+    margin-top: 32px;
+  }
+}
+  
+ 
 
 @media only screen and (max-width: 425px) {
 
@@ -21,6 +30,6 @@
     margin-bottom: 0;
     margin-left: auto;
     margin-right: auto;
+    max-width: 288px;
   }
-
 }
