--- a/pages/index.css
+++ b/pages/index.css
@@ -1,10 +1,14 @@
+@import url(../vendor/normalize.css);
 @import url(../blocks/root/root.css);
-@import url(../fonts/fonts.css);
-@import url(../styles/normalize.css);
+@import url(../vendor/fonts/fonts.css);
 
-@import url(../blocks/header/__container/header__container.css);
-@import url(../blocks/header/__logo/logo_place_header.css);
+
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__link/header__link.css);
+
+@import url(../blocks/underline/underline.css);
+
 
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__container/lead__container.css);
@@ -14,7 +18,7 @@
 @import url(../blocks/lead/__train/lead__train.css);
 @import url(../blocks/lead/__quote/lead__quote.css);
 
-@import url(../blocks/travel/__container/travel__container.css);
+@import url(../blocks/travel/travel.css);
 @import url(../blocks/travel/__title/travel__title.css);
 @import url(../blocks/travel/__quote/travel__quote.css);
 @import url(../blocks/travel/__time-zones/travel__time-zones.css);
@@ -23,18 +27,18 @@
 @import url(../blocks/travel/__item/place__item.css);
 @import url(../blocks/travel/__item/place__item1.css);
 
-
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__item/cards__item.css);
 
 @import url(../blocks/places/__container/places__container.css);
+@import url(../blocks/places/__container/places__container_theme.css);
 @import url(../blocks/places/__title/places__title.css);
 @import url(../blocks/places/__title/places__title_theme.css);
 @import url(../blocks/places/__url_size/places__url_size.css);
 @import url(../blocks/places/__url/places__url.css);
 @import url(../blocks/places/__link/places__link.css);
-@import url(../blocks/places/__kosa/places__kosa.css);
 @import url(../blocks/places/__paragraph/places__paragraph.css);
+@import url(../blocks/places/__image/places__image.css);
 
 @import url(../blocks/baikal/baikal.css);
 @import url(../blocks/baikal/__link/baikal__link.css);
@@ -44,6 +48,6 @@
 @import url(../blocks/baikal/__overlay/baikal__overlay.css);
 
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__list/footer__list.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
-@import url(../blocks/footer/__columns/footer__columns.css);
