--- a/blocks/lead/__quote/lead__quote.css
+++ b/blocks/lead/__quote/lead__quote.css
@@ -11,7 +11,7 @@
   margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
-  TEXT-TRANSFORM: UPPERCASE;
+  text-transform: uppercase;
 }
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
