--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -29,13 +29,12 @@
     width: 46.1vw;
     font-size: 16px;
     line-height: 26.08px;
-    padding-bottom: 25px
+    padding-bottom: 25px;
   }
 }
 
 @media only screen and (max-width: 425px) {
   .places__paragraph {
-    padding-bottom: 0;
     /* margin: 0 auto; */
     margin-left: 16px;
     margin-right: 16px;
@@ -45,6 +44,6 @@
     /* padding-top: 8px; */
     padding-bottom: 26px;
     max-width: 288px;
-}
-  
+  }
+
 }
