--- a/blocks/places/__url/places__url.css
+++ b/blocks/places/__url/places__url.css
@@ -1,16 +1,14 @@
 .places__url {
-    padding-top: 30px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 20.4px;
-    color: #AAAAAA;
-    margin: 0 auto;
-  }
+  padding-top: 30px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20.4px;
+  color: #AAAAAA;
+  margin: 0 auto;
+}
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
-  .places__url {
-
-  }
+  .places__url {}
 }
 
 @media only screen and (max-width: 425px) {
