--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,43 +1,43 @@
 .places__title {
-    font-weight: 900;
-    font-size: 72px;
-    line-height: 76px;
-    color: #ffffff;
-    /* text-align: center; */
-    /* width: 60%; */
-    /* display: flex; */
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    /* justify-content: center; */
-    margin-top: 0;
-    margin-bottom: 0;
-    width: 27,9vw;
-  
-  }
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  color: #ffffff;
+  /* text-align: center; */
+  /* width: 60%; */
+  /* display: flex; */
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  /* justify-content: center; */
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 27, 9vw;
+
+}
 
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
   .places__title {
     font-size: 7.3vw;
   }
-  
+
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
-    .places__title {
-        font-size: 42px;
-        max-width: 340px;
-        
-      }
+  .places__title {
+    font-size: 42px;
+    max-width: 340px;
+
+  }
 }
 
 @media only screen and (max-width: 425px) {
-    .places__title {
-      font-size: 32px;
-      line-height: 35px;
-      /* width: 88.6vw; */
-      margin: 0 auto;
-      margin-left: 16px;
-      margin-right: 16px;
-      }
+  .places__title {
+    font-size: 32px;
+    line-height: 35px;
+    /* width: 88.6vw; */
+    margin: 0 auto;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
