--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,10 +1,10 @@
 .cards {
-  max-width: 171.8vw;
+  max-width: 1184px;
   margin: 0 auto;
   display: grid;
   justify-content: center;
   padding-top: 92px;
-  grid-template-columns: repeat(2, 284px 284px);
+  grid-template-columns: repeat(2, 21vw 21vw);
   gap: 17px;
 }
 
@@ -23,7 +23,7 @@
     max-width: 100%;
     padding-top: 84px;
     grid-template-columns: repeat(2, 45.8vw);
-    gap: 20px;
+    gap: 16px;
   }
 
 }
