--- a/blocks/header/_underline/header__link_underline.css
+++ b/blocks/header/_underline/header__link_underline.css
@@ -4,9 +4,9 @@
 }
 
 .header__link_underline:active {
-    text-decoration: underline 0.15em rgb(248, 248, 248);;
+    text-decoration: underline 0.15em rgb(248, 248, 248);
     text-decoration-color: rgb(248, 248, 248);
 }
 
 
-  /* Подскажите пожалуйста как это можно реализовать я не понимаю :( */
+  /* Иван, подскажите пожалуйста как это можно реализовать я не понимаю :( */
