--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,6 +5,13 @@
   line-height: 18px;
   text-decoration: none;
   padding-right: 14px;
+  opacity: 1;
+  transition: 1s linear;
+}
+
+
+.footer__link:hover {
+  opacity: 0.8;
 }
 
 
@@ -14,6 +21,8 @@
     line-height: 24px;
     padding-bottom: 32px;
     display: block;
-    padding-right: 14px;
   }
 }
+
+
+
