--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -8,16 +8,15 @@
   transition: 1s linear;
 }
 
+.header__link:hover {
+  opacity: 0.8;
+  text-decoration: underline;
+}
 
 
 @media only screen and (max-width: 425px) {
   .header__link {
     line-height: 22px;
     font-size: 18px;
-    font-weight: normal;
-    color: #ffffff;
-    padding-left: 18px;
-    text-decoration: none;
-    transition: 1s linear;
   }
 }
