--- a/blocks/header/__link/_underline/header__link_underline.css
+++ b/blocks/header/__link/_underline/header__link_underline.css
@@ -1,12 +1,38 @@
-.header__link_underline {
-    transition: text-decoration-color 300ms;
 
-}
 
-.header__link_underline:active {
-    text-decoration: underline 0.15em rgb(248, 248, 248);
-    text-decoration-color: rgb(248, 248, 248);
+.header__link_underline:checked {
+    text-decoration: underline;
 }
 
 
   /* Иван, подскажите пожалуйста как это можно реализовать я не понимаю :( */
+
+
+
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+    background-color: #2196F3;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .container .checkmark:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+  }
