--- a/blocks/places/__container/places__container.css
+++ b/blocks/places/__container/places__container.css
@@ -6,8 +6,21 @@
   gap: 48px 40px;
   justify-content: center;
   grid-template-columns: 460px 484px;
+  padding-top: 96px;
+}
+
+.places__container:nth-child(1) {
+  padding-top: 97px;
+
+}
+
+.places__container:nth-child(2) {
   padding-top: 79px;
 }
+
+
+
+
 
 
 @media only screen and (max-width: 1024px) and (min-width: 768px) {
@@ -16,30 +29,90 @@
     grid-template-columns: 42.6vw 44.3vw;
     gap: 47px 34px;
     padding-top: 85px;
-
   }
+
+  .places__container:nth-child(1) {
+    padding-top: 97px;
+  }
+
+  .places__container:nth-child(2) {
+    padding-top: 87px;
+  }
+
+
+
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
   .places__container {
     grid-template-columns: 44.5vw 46.1vw;
-    gap: 33px 25px;
+    gap: 44px 25px;
     max-width: 720px;
-    padding-top: 56px;
+    padding-top: 71px;
+  }
+
+  .places__container:nth-child(1) {
+    padding-top: 92px;
 
   }
 
+  .places__container:nth-child(2) {
+    padding-top: 74px;
+  }
+
+  .places__container:nth-child(3) {
+    gap: 50px 25px;
+  }
+
+  .places__container:nth-child(4) {
+
+  }
+
+  .places__container:nth-child(5) {
+    gap: 22px 25px;
+  }
+
+  .places__container:nth-child(1) .places__title {
+    letter-spacing: 2px;
+  }
+
+  .places__title:nth-child(2) {
+    letter-spacing: 0;
+  }
+
+  .places__container:nth-child(1) .places__url {
+    padding-top: 38px;
+  }
+
+  .places__container:nth-child(2) .places__url {
+    padding-top: 0;
+  }
+
+  .places__container:nth-child(3) .places__url {
+    padding-top: 0;
+  }
 }
- /* Я не понимаю как это правильно реализовать без модификаторов потому что нижний блок начинает съезжать, что я делаю не так? https://disk.yandex.ru/i/Wkt5OHANG5_MDA*/
+
 @media only screen and (max-width: 425px) {
   .places__container {
     grid-template-columns: 320px;
-    padding-top: 50px;
     gap: 29px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
     margin-bottom: 0;
+    padding-top: 49px;
   }
+
+
+  .places__container:nth-child(1) {
+    padding-top: 62px;
+  }
+
+  .places__container:nth-child(2) {
+    padding-top: 50px;
+  }
+
+
 
 }
