--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -11,6 +11,7 @@
   /* justify-content: center; */
   margin-top: 0;
   margin-bottom: 0;
+
 }
 
 
@@ -25,8 +26,12 @@
   .places__title {
     font-size: 42px;
     max-width: 340px;
+    max-width: 330px;
+    line-height: 46px;
 
   }
+
+
 }
 
 @media only screen and (max-width: 425px) {
@@ -38,4 +43,5 @@
     margin-left: 16px;
     margin-right: 16px;
   }
+
 }
