--- a/blocks/places/__title/places__title_theme.css
+++ b/blocks/places/__title/places__title_theme.css
@@ -1,7 +1,11 @@
 @media only screen and (max-width: 768px) and (min-width: 425px) {
-    .places__title_theme {
-      letter-spacing: 2px;
-      line-height: 46px;
+  .places__title_theme {
+    letter-spacing: 2px;
+    line-height: 46px;
+    max-width: 320px;
+    line-height: 46px;
+  }
 
-      }
+ 
+
 }
