--- a/blocks/places/__url/places__url.css
+++ b/blocks/places/__url/places__url.css
@@ -1,20 +1,19 @@
 .places__url {
-  padding-top: 30px;
   font-weight: 400;
   font-size: 12px;
   line-height: 20.4px;
   color: #AAAAAA;
   margin: 0 auto;
   letter-spacing: 2px;
+  margin-bottom: 12px;
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
-
-
+  
+}
 @media only screen and (max-width: 425px) {
   .places__url {
     width: 68.6vw;
-    padding-top: 0;
     margin-left: 16px;
     margin-right: 16px;
   }
