--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,8 @@
 @import url(../blocks/root/root.css);
 @import url(../vendor/fonts/fonts.css);
 
+@import url(../blocks/hover-link/hover-link.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__link/header__link.css);
@@ -26,6 +28,7 @@
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__item/cards__item.css);
 
+@import url(../blocks/places/places.css);
 @import url(../blocks/places/__website/places__website.css);
 @import url(../blocks/places/__container/places__container.css);
 @import url(../blocks/places/__title/places__title.css);
