--- a/blocks/places/__container/places__container.css
+++ b/blocks/places/__container/places__container.css
@@ -25,7 +25,7 @@
 }
 
 
-@media only screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
   .places__container {
     grid-template-columns: 1fr;
     gap: 32px;
