--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,48 +1,15 @@
 .places__paragraph {
-  padding-bottom: 24px;
   font-weight: 400;
   font-size: 18px;
-  line-height: 29.34px;
-  width: 35.3vw;
-  margin-top: 0;
-  margin-bottom: 0;
-
-}
-
-.places__paragraph:last-child {
-  padding-bottom: 0;
+  line-height: 29px;
+  margin: 0;
 }
 
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .places__paragraph {
-    margin: 0 auto;
-    width: 46.3vw;
-    font-size: 18px;
-  }
-}
-
-@media only screen and (max-width: 768px) and (min-width: 425px) {
-  .places__paragraph {
-    margin: 0 auto;
-    width: 46.1vw;
     font-size: 16px;
-    line-height: 26.08px;
-    padding-bottom: 25px;
+    line-height: 26px;
   }
 }
 
-@media only screen and (max-width: 425px) {
-  .places__paragraph {
-    /* margin: 0 auto; */
-    margin-left: 16px;
-    margin-right: 16px;
-    width: 89.6vw;
-    font-size: 16px;
-    line-height: 26.08px;
-    /* padding-top: 8px; */
-    padding-bottom: 26px;
-    max-width: 288px;
-  }
-
-}
