--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -4,7 +4,7 @@
   display: grid;
   justify-content: center;
   padding-top: 92px;
-  grid-template-columns: repeat(2, 22vw 22vw);
+  grid-template-columns: repeat(2, 284fr 284fr);
   gap: 17px;
 }
 
