--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,23 +1,5 @@
 .places__image {
-  width: 460px;
-  margin: 0 auto;
-}
-
-
-@media only screen and (max-width: 1024px) and (min-width: 768px) {
-  .places__image {
-    width: 100%;
-  }
-}
-
-@media only screen and (max-width: 768px) and (min-width: 425px) {
-  .places__image {
-    width: 44.5vw;
-  }
-}
-
-@media only screen and (max-width: 425px) {
-  .places__image {
-    width: 100%;
-  }
+  width: 100%;
+  aspect-ratio: 1 / 1; 
+  display: block
 }
