--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -3,45 +3,26 @@
   font-size: 72px;
   line-height: 76px;
   color: #ffffff;
-  /* text-align: center; */
-  /* width: 60%; */
-  /* display: flex; */
-  /* margin-left: auto; */
-  /* margin-right: auto; */
-  /* justify-content: center; */
-  margin-top: 0;
-  margin-bottom: 0;
-
+  margin: 0;
 }
 
 
-@media only screen and (max-width: 1024px) and (min-width: 768px) {
+@media screen and (max-width: 1024px) {
   .places__title {
     font-size: 7.3vw;
   }
-
 }
 
-@media only screen and (max-width: 768px) and (min-width: 425px) {
+@media screen and (max-width: 768px) {
   .places__title {
     font-size: 42px;
-    max-width: 340px;
-    max-width: 330px;
     line-height: 46px;
-
   }
-
-
 }
 
-@media only screen and (max-width: 425px) {
+@media screen and (max-width: 425px) {
   .places__title {
     font-size: 32px;
     line-height: 35px;
-    /* width: 88.6vw; */
-    margin: 0 auto;
-    margin-left: 16px;
-    margin-right: 16px;
   }
-
 }
