--- a/blocks/baikal/__subtitle/baikal__subtitle.css
+++ b/blocks/baikal/__subtitle/baikal__subtitle.css
@@ -9,13 +9,13 @@
   margin-right: auto;
   margin-top: 0;
   margin-bottom: 0;
-  z-index: -1;
 }
 
 @media only screen and (max-width: 768px) and (min-width: 425px) {
   .baikal__subtitle {
     font-size: 2.3vw;
     max-width: 45%;
+    line-height: 16px;
   }
 }
 
@@ -25,6 +25,7 @@
     max-width: 270px;
     font-size: 14px;
     line-height: 16px;
-    padding-top: 20px;
+    padding-top: 16px;
+    
   }
 }
