--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,7 +12,6 @@
   padding-top: 84px;
   padding-bottom: 24px;
   list-style-type: none;
-
 }
 
 
@@ -39,6 +38,8 @@
   .footer {
     padding-top: 50px;
     padding-left: 15px;
+    flex-direction: column;
+    align-content: flex-start;
   }
 
 }
