--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,9 +4,14 @@
   font-size: 16px;
   line-height: 18px;
   text-decoration: none;
-  padding-right: 14px;
+  padding-right: 18px;
 }
 
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+  .footer__link {
+    padding-right: 1.83vw;
+  }
+}
 
 @media only screen and (max-width: 425px) {
   .footer__link {
