--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -6,6 +6,12 @@
 }
 
 
+@media only screen and (max-width: 768px) and (min-width: 425px) {
+    .footer__list {
+      max-width: 425px;
+    }
+}
+
 @media only screen and (max-width: 425px) {
     .footer__list {
         max-width: 150px;
